[project]
name = "cocotbext-apb"
version = "0.1.0"
description = "AMBA APB cocotb extension, 2.0 ready"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cocotb", "cocotb-bus"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cocotbext/apb"]

[tool.uv.sources]
cocotb = { git = "https://github.com/cocotb/cocotb", rev = "master" }
cocotb-bus = { git = "https://github.com/cocotb/cocotb-bus", rev = "master" }

[dependency-groups]
dev = ["pytest>=8.3.4"]
